refactor and fix the issue with not getting request body in filter